Added recent Boot Camp assignment links.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 <h3>Social Links</h3>
 <ul><a href="https://www.facebook.com/?ref=tn_tnmn">FaceBook</a></ul>
 <ul><a href="https://www.linkedin.com/in/norman-gwinn-3a82559/">LinkedIn</a></ul>
+<h3>Boot Camp Assignments</h3>
+<ul><a href="https://normangwinn.github.io/javascript-challenge/index.html">UFO Sightings</a></ul>
+<ul><a href="https://normangwinn.github.io/plotly-challenge/index.html">Belly Button Biodiversity</a></ul>
 <h3>My Favorites</h3>
 <table border="1">
   <tr><th>Movies</th><th>Songs</th><th>Books</th></tr>
