--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 <h3>Boot Camp Assignments</h3>
 <ul><a href="https://normangwinn.github.io/javascript-challenge/index.html">UFO Sightings</a></ul>
 <ul><a href="https://normangwinn.github.io/plotly-challenge/index.html">Belly Button Biodiversity</a></ul>
+<ul><a href="https://normangwinn.github.io/D3-Challenge/index.html">Health Factor Study</a></ul>
 <h3>My Favorites</h3>
 <table border="1">
   <tr><th>Movies</th><th>Songs</th><th>Books</th></tr>
